Add Profile database

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -33,13 +33,13 @@
                 <div class="sidebar-menu">
                     <ul class="menu">
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="#">
+                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin">
                                 <i class="fas fa-user"></i>
                                 <p class="pl-24">Profile</p>
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="#">
+                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin/blog">
                                 <i class="fas fa-blog"></i>
                                 <p class="pl-24">Blog</p>
                             </a>
