--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -140,25 +140,22 @@
                 <div class="row mt-4">
                     <div class="col-md-8 about-information">
                         <h1>I'm <span>Sabuhi Gasimov,</span> a Web Developer</h1>
-                        <p>I help you build brand for your business at an affordable price. Thousands of clients have procured exceptional results while working with our dedicated team. when an unknown printer took a galley of type and scrambled it to make
-                            a type specimen book. Delivering work within time and budget which meets client’s requirements is our moto. Lorem Ipsum has been the industry's standard dummy text ever when an unknown printer took a galley. Lorem Ipsum has
-                            been the industry's standard dummy text ever when an unknown printer took a galley.
-                        </p>
+                        <p>{{prof.about}}</p>
                     </div>
                     <div class="col-md-4">
                         <div class="list">
                             <ul>
                                 <li>
-                                    <span>Name:</span> Sabuhi Gasimov
+                                    <span>Name:</span> {{prof.profile_name}}
                                 </li>
                                 <li>
-                                    <span>Email:</span> <a href="#">sabuhiq0@gmail.com</a>
+                                    <span>Email:</span> <a href="#">{{prof.profile_email}}</a>
                                 </li>
                                 <li>
-                                    <span>Age:</span> 17
+                                    <span>Age:</span> {{prof.profile_age}}
                                 </li>
                                 <li>
-                                    <span>Form:</span> Baku,Azerbaijan
+                                    <span>From:</span> {{prof.profile_from}}
                                 </li>
                             </ul>
                             <div class="admin-contact-button">
