Add skills section database

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -45,7 +45,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="#">
+                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin/skills">
                                 <i class="fas fa-atom icon"></i>
                                 <p class="pl-24">Skill</p>
                             </a>
