--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="#">
+                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin/projects">
                                 <i class="fas fa-tasks"></i>
                                 <p class="pl-24">Projects</p>
                             </a>
