--- a/templates/admin/update_skill.html
+++ b/templates/admin/update_skill.html
@@ -4,16 +4,16 @@
         <h1>Update blog</h1>
         <form action="/skillEdit/{{newSkill.id}}" method="POST">
             <div class="form-group">
-                <label>Skills title</label>
+                <label class="mt-5">Skills title</label>
                 <input type="text" name="skills_title" value="{{newSkill.skills_title}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <div class="form-group mt-3">
-                <label>Skills content</label>
-                <input type="text" name="skills_content" value="{{newSkill.skills_content}}" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="form-group mt-3">
                 <label>Skills Class</label>
                 <input type="text" name="skills_class" value="{{newSkill.skills_class}}" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="form-group mt-3">
+                <label>Skills content</label>
+                <textarea name="skills_content" class="form-control" id="exampleFormControlTextarea1" placeholder="{{newSkill.skills_content}}" rows="5" required></textarea>
             </div>
             <!-- <div class="form-group mt-3">
                 <input type="file" name="blog_img" class="form-control" id="exampleInputPassword1">
