--- a/templates/admin/blog.html
+++ b/templates/admin/blog.html
@@ -4,7 +4,7 @@
         <h1>Add new blog</h1>
         <form action="/admin/blog" method="POST" enctype="multipart/form-data">
             <div class="form-group">
-                <label>Blog Name</label>
+                <label class="mt-5">Blog Name</label>
                 <input type="text" name="blog_name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="form-group mt-3">
