--- a/templates/admin/skills.html
+++ b/templates/admin/skills.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 d-flex align-items-center">
     <div class="container">
-        <h1>Add new skills</h1>
+        <h1>Add new <span style="color:#20C997;">skills</span></h1>
         <form action="/admin/skills" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label>Skills title</label>
@@ -9,11 +9,11 @@
             </div>
             <div class="form-group mt-3">
                 <label>Skills class</label>
-                <input type="text" name="skills_class" class="form-control" id="exampleInputPassword1">
+                <input type="text" name="skills_class" class="form-control" id="exampleInputPassword1" required>
             </div>
             <div class="form-group mt-3">
                 <label>Skills content</label>
-                <textarea name="skills_content" class="form-control" id="exampleFormControlTextarea1" rows="2" required></textarea>
+                <textarea name="skills_content" class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
             </div>
             <button type="submit" class="btn btn-outline-success mt-3">Submit</button>
         </form>
