--- a/templates/admin/update_block.html
+++ b/templates/admin/update_block.html
@@ -4,7 +4,7 @@
         <h1>Update blog</h1>
         <form action="/blogEdit/{{newBlogs.id}}" method="POST">
             <div class="form-group">
-                <label>Blog Name</label>
+                <label class="mt-5">Blog Name</label>
                 <input type="text" name="blog_name" value="{{newBlogs.blog_name}}" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="form-group mt-3">
