--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -208,96 +208,25 @@
                 </div>
                 <!-- Headnig Section End -->
                 <div class="row">
+                    {% for project in projects%}
+
                     <div class="col-md-6 work-section">
-                        <a href="https://github.com/Sabuhi0/Admin-Dashboard-UI">
+                        <a href="{{project.project_url}}">
                             <div class="work-section-items">
-                                <img src="/static/assets/uploads/Admin-Dashboard-UI-main.png" alt="Avatar" class="image">
+                                <img src="{{project.project_img}}" alt="Avatar" class="image">
                                 <div class="overlay-item">
                                     <div class="item-text">
-                                        <h1><span>Dashboard Kit</span></h1>
+                                        <h1><span>{{project.project_name}}</span></h1>
                                         <div class="developer">
-                                            <p><span class="frontEnd">(</span>FrontEnd)</p>
+                                            <p><span class="frontEnd">{{project.project_detail}}</span></p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </a>
                     </div>
-                    <div class="col-md-6 work-section">
-                        <a href="https://github.com/Sabuhi0/Qanun.az">
-                            <div class="work-section-items">
-                                <img src="/static/assets/uploads/bootstrap.png" alt="Avatar" class="image">
-                                <div class="overlay-item">
-                                    <div class="item-text">
-                                        <h1>Bootstrap <span>Templates</span></h1>
-                                        <div class="developer">
-                                            <p><span class="bootstrap">(Bootstrap</span>)</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6 work-section">
-                        <a href="https://github.com/Sabuhi0/Admin-Dashboard-UI">
-                            <div class="work-section-items">
-                                <img src="/static/assets/uploads//w3css templates.png" alt="Avatar" class="image">
-                                <div class="overlay-item">
-                                    <div class="item-text">
-                                        <h1>W3css <span>Templates</span></h1>
-                                        <div class="developer">
-                                            <p><span class="frontEnd">(Front</span>End)</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6 work-section">
-                        <a href="https://github.com/Sabuhi0/Qanun.az">
-                            <div class="work-section-items">
-                                <img src="/static/assets/uploads/Qanun.az.png" alt="Avatar" class="image">
-                                <div class="overlay-item">
-                                    <div class="item-text">
-                                        <h1>Qanun.<span>az</span></h1>
-                                        <div class="developer">
-                                            <p><span class="frontEnd">(Front</span>End)</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6 work-section">
-                        <a href="https://github.com/Sabuhi0/Qanun.az">
-                            <div class="work-section-items">
-                                <img src="/static/assets/uploads/spotify.png" alt="Avatar" class="image">
-                                <div class="overlay-item">
-                                    <div class="item-text">
-                                        <h1><span>Spotify </span>Clone</h1>
-                                        <div class="developer">
-                                            <p><span class="frontEnd">(Front</span>End)</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6 work-section">
-                        <a href="https://github.com/Sabuhi0/Qanun.az">
-                            <div class="work-section-items">
-                                <img src="/static/assets/uploads/calculate.png" alt="Avatar" class="image">
-                                <div class="overlay-item">
-                                    <div class="item-text">
-                                        <h1><span>Calculate </span>Clone</h1>
-                                        <div class="developer">
-                                            <p><span class="frontEnd">(Front</span>End)</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+
+                    {%endfor%}
                 </div>
             </div>
         </div>
