--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -24,48 +24,76 @@
             <!-- Start idebar section -->
             <aside class="sidebar">
                 <div class="header-item">
-                    <a class="d-flex align-items-center pl-32" href="#">
-                        <img style="border-radius: 50%;height: 35px;width: 35px;object-fit: cover;object-fit: cover;" src="https://i.pinimg.com/originals/85/76/30/8576308f3ed156f01bd9a865c05852e0.jpg" alt="Dashboard Kit">
-                        <p class="top-text">Admin <span>Panel</span></p>
+                    <a class="d-flex align-items-center justify-content-between pl-24" href="#">
+                        <div class="text">
+                            <p class="top-text">Admin <span>Panel</span></p>
+                        </div>
+                        <div class="logo" style="padding-right: 14px;">
+                            <img style="border-radius: 50%;height: 35px;width: 35px;object-fit: cover;object-fit: cover;" src="https://i.pinimg.com/originals/85/76/30/8576308f3ed156f01bd9a865c05852e0.jpg" alt="Dashboard Kit">
+                        </div>
                     </a>
                 </div>
                 <div class="divider mt-16 mb-16"></div>
                 <div class="sidebar-menu">
                     <ul class="menu">
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin">
-                                <i class="fas fa-user"></i>
-                                <p class="pl-24">Profile</p>
+                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="/admin">
+                                <div class="text">
+                                    <p>Profile</p>
+                                </div>
+                                <div class="logo">
+                                    <i class="fas fa-user"></i>
+                                </div>
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin/blog">
-                                <i class="fas fa-blog"></i>
-                                <p class="pl-24">Blog</p>
+                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="/admin/blog">
+                                <div class="text">
+                                    <p>Blog</p>
+                                </div>
+                                <div class="logo">
+                                    <i class="fas fa-blog"></i>
+                                </div>
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin/skills">
-                                <i class="fas fa-atom icon"></i>
-                                <p class="pl-24">Skill</p>
+                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="/admin/skills">
+                                <div class="text">
+                                    <p>Skill</p>
+                                </div>
+                                <div class="logo">
+                                    <i class="fas fa-atom icon"></i>
+                                </div>
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="/admin/projects">
-                                <i class="fas fa-tasks"></i>
-                                <p class="pl-24">Projects</p>
+                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="/admin/projects">
+                                <div class="text">
+                                    <p>Projects</p>
+                                </div>
+                                <div class="logo">
+                                    <i class="fas fa-tasks"></i>
+                                </div>
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="#">
-                                <i class="far fa-comments"></i>
-                                <p class="pl-24">FeedBacks</p>
+                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="/admin/feedback">
+                                <div class="text">
+                                    <p>FeedBacks</p>
+                                </div>
+                                <div class="logo">
+                                    <i class="far fa-comments"></i>
+                                </div>
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="#">
-                                <i class="fas fa-phone-alt"></i>
-                                <p class="pl-24">Contacts</p>
+                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="#">
+                                <div class="text">
+                                    <p>Contacts</p>
+                                </div>
+                                <div class="logo">
+                                    <i class="fas fa-phone-alt"></i>
+                                </div>
                             </a>
                         </li>
                     </ul>
@@ -73,9 +101,13 @@
                 <div class="divider mt-16 mb-16"></div>
                 <footer>
                     <li>
-                        <a class="menu-item-link d-flex align-items-center pl-32 pr-24" href="#">
-                            <i class="fas fa-sign-out-alt icon"></i>
-                            <p class="pl-24">Log out</p>
+                        <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="#">
+                            <div class="text">
+                                <p>Log out</p>
+                            </div>
+                            <div class="logo">
+                                <i class="fas fa-sign-out-alt icon"></i>
+                            </div>
                         </a>
                     </li>
                 </footer>
