--- a/templates/admin/skills.html
+++ b/templates/admin/skills.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 d-flex align-items-center">
     <div class="container">
-        <h1>Add new <span style="color:#20C997;">skills</span></h1>
+        <h1>Add new <span style="color:#20C997;">Skills</span></h1>
         <form action="/admin/skills" method="POST" enctype="multipart/form-data">
             <div class="form-group">
-                <label>Skills title</label>
+                <label class="mt-5">Skills title</label>
                 <input type="text" name="skills_title" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="form-group mt-3">
