--- a/templates/admin/update_block.html
+++ b/templates/admin/update_block.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 d-flex align-items-center">
     <div class="container">
-        <h1>Update blog</h1>
+        <h1>Update <span style="color: #20C997;">Blog</span></h1>
         <form action="/blogEdit/{{newBlogs.id}}" method="POST">
             <div class="form-group">
                 <label class="mt-5">Blog Name</label>
