--- a/templates/admin/update_project.html
+++ b/templates/admin/update_project.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 d-flex align-items-center">
     <div class="container">
-        <h1>Update <span style="color: #20C997;">project</span></h1>
+        <h1>Update <span style="color: #20C997;">Project</span></h1>
         <form action="/projectEdit/{{newProject.id}}" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="mt-5">Project Name</label>
