--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -9,6 +9,7 @@
     <!-- Add Icon Link -->
     <link rel="icon" href="https://www.mcsin-k12.org/images/links/schoology.png" type="image/x-icon">
     <!--=============== BOOTSTRAP ===============-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!--=============== FONTS ===============-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -241,54 +242,19 @@
                 <p class="position-center text-center">Client Speak</p>
             </div>
             <!-- Headnig Section End -->
+
             <div class="row-feedbacks mt-5">
+                {%for feedback in feedbacks%}
                 <div class="feedback-item">
                     <div class="d-flex align-items-center mb-25">
-                        <img style="border-radius: 50%; width: 65px; height: 65px;" src="/static/assets/uploads/client-sm-3.jpg" alt="">
+                        <img style="border-radius: 50%; width: 65px; height: 65px;" src="{{feedback.feedback_photo}}" alt="">
                         <div class="feedbacks-item ml-12">
-                            <h1 class="mb-10">Dennis Jacques</h1>
-                            <small>User from USA</small>
+                            <h1 class="mb-10">{{feedback.feedback_name}}</h1>
+                            <small>{{feedback.feedback_from}}</small>
                         </div>
                     </div>
                     <div class="feedbacks-item mb-25">
-                        <p>“I have used them twice now. Good rates, very efficient service and priced simply dummy text of the printing and typesetting industry quidam interesset his et. Excellent.”</p>
-                    </div>
-                    <div class="point d-flex justify-content-between">
-                        <span>
-                            <i class="fas fa-star text-warning"></i>
-                            <i class="fas fa-star text-warning"></i>
-                            <i class="fas fa-star text-warning"></i>
-                            <i class="fas fa-star text-warning"></i>
-                            <i class="fas fa-star text-warning"></i>
-                        </span>
-                        <div class="social-list">
-                            <span>
-                                <a href="https://github.com/samirkarimov" class="github">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                                <a href="#" class="facebook">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="https://github.com/samirkarimov" class="github">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                                <a href="#" class="facebook">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="feedback-item">
-                    <div class="d-flex align-items-center mb-25">
-                        <img style="border-radius: 50%; width: 65px; height: 65px;" src="/static/assets/uploads/client-sm-4.jpg" alt="">
-                        <div class="feedbacks-item ml-12">
-                            <h1 class="mb-10">Chris Tom</h1>
-                            <small>User from UK</small>
-                        </div>
-                    </div>
-                    <div class="feedbacks-item mb-25">
-                        <p>“I have used them twice now. Good rates, very efficient service and priced simply dummy text of the printing and typesetting industry quidam interesset his et. Excellent.”</p>
+                        <p>“{{feedback.feedback_detail}}”</p>
                     </div>
                     <div class="point d-flex justify-content-between">
                         <span>
@@ -316,7 +282,9 @@
                         </div>
                     </div>
                 </div>
+                {%endfor%}
             </div>
+        </div>
         </div>
         <!-- Feedbacks Section End -->
     </section>
@@ -447,6 +415,9 @@
     </footer>
     <!--=============== JS ===============-->
     <script src="/static/assets/js/script.js"></script>
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 
 </html>
