Add Contact and login

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -87,7 +87,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="#">
+                            <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="/admin/contact">
                                 <div class="text">
                                     <p>Contacts</p>
                                 </div>
@@ -101,7 +101,7 @@
                 <div class="divider mt-16 mb-16"></div>
                 <footer>
                     <li>
-                        <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="#">
+                        <a class="menu-item-link d-flex align-items-center justify-content-between pl-32 pr-24" href="/logout">
                             <div class="text">
                                 <p>Log out</p>
                             </div>
