--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -191,6 +191,35 @@ html {
     text-align: center;
 }
 
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.loader img {
+    /* width: 100px; */
+    height: 100px;
+}
+
+.disappear {
+    animation: vanish 1s forwards;
+}
+
+@keyframes vanish {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 ::selection {
     background: #20c997;
     color: var(--color-white);
