--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -12,13 +12,13 @@
 <body>
     <div class="login-box">
         <h2>Login</h2>
-        <form>
+        <form action="/login" method="POST">
             <div class="user-box">
-                <input type="text" name="" required>
+                <input type="text" name="admin_username" required>
                 <label>Username</label>
             </div>
             <div class="user-box">
-                <input type="password" name="" required>
+                <input type="password" name="admin_password" required>
                 <label>Password</label>
             </div>
             <a href="#">
