--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Who is Sabuhi ?</title>
     <!-- Add Icon Link -->
-    <link rel="icon" href="https://www.mcsin-k12.org/images/links/schoology.png" type="image/x-icon">
+    <link rel="icon" href="https://i.pinimg.com/originals/85/76/30/8576308f3ed156f01bd9a865c05852e0.jpg" type="image/x-icon">
     <!--=============== BOOTSTRAP ===============-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -36,6 +36,12 @@
 </head>
 
 <body>
+    <!-- Section Pre-loader Start -->
+    <div class="loader disappear">
+        <img src="https://smashinghub.com/wp-content/uploads/2014/08/cool-loading-animated-gif-3.gif" alt="">
+    </div>
+    <!-- Section Pre-loader End -->
+
     <!-- Click Scroll top -->
     <div class="scroll-button">
         <button type="button" id="btn-back-to-top"><i class="fas fa-chevron-up"></i></button>
@@ -330,22 +336,10 @@
                     <div class="col-md-3 col-md-1 footer-sidebar mt-4">
                         <div class="address-section">
                             <h1>Address</h1>
-                            <p class="mt-20 mb-1">4th Floor, Plot No.22,</p>
-                            <p class="pt-6 mb-1">4th Floor, Plot No.22,</p>
-                            <p class="pt-6 mb-1">4th Floor, Plot No.22,</p>
+                            <p class="mt-20 mb-1">Zabrat,Baku,Azerbaijan</p>
                         </div>
                         <div class="contact-me mt-20">
                             <p class="mb-1">
-                                <span>
-                                    <i class="fas fa-phone-alt"></i>(+994) 55 234 62 50
-                                </span>
-                            </p>
-                            <p class="pt-6 mb-1">
-                                <span>
-                                    <i class="fas fa-phone-alt"></i>(+994) 55 234 62 50
-                                </span>
-                            </p>
-                            <p class="pt-6 mb-1">
                                 <span>
                                     <i class="fas fa-phone-alt"></i>(+994) 55 234 62 50
                                 </span>
@@ -374,14 +368,16 @@
                     <div class="col-md-9 col-md-1 admin-contact mt-4">
                         <h1>Send Us A Note</h1>
                         <div class="form">
-                            <form action="#">
+                            <form action="/admin/contact" method="POST" enctype="multipart/form-data">
                                 <div class="display-flex display-block">
-                                    <input class="input mr-15" required type="text" placeholder="Name">
-                                    <input class="input" type="text" placeholder="Email">
+                                    <input class="input mr-15" name="contact_name" required type="text" placeholder="Name" aria-label="Username">
+                                    <input class="input" name="contact_email" type="email" placeholder="Email" aria-label="Server">
                                 </div>
-                                <textarea class="input" rows="4" cols="50" name="comment" form="usrform" placeholder="Tell us more about your needs........"></textarea>
-                                <div class="admin-contact-button text-center">
-                                    <button class="send" type="submit">Send Message</button>
+                                <div class="mesaj_input">
+                                    <textarea class="input" type="text" name="contact_message" placeholder="Tell us more about your needs........" rows="4"></textarea>
+                                </div>
+                                <div class="admin-contact-button text-center ">
+                                    <button class="send " type="submit ">Send Message</button>
                                 </div>
                             </form>
                         </div>
@@ -393,19 +389,19 @@
     </section>
     <footer id="footer">
         <!-- Footer Section Start -->
-        <div class="container">
+        <div class="container ">
             <div class="footer-item">
                 <div class="footer-text">
-                    <p>Copyright © 2021 <a href="#">Sabuhi</a>. All Rights Reserved.</p>
+                    <p>Copyright © 2021 <a href="# ">Sabuhi</a>. All Rights Reserved.</p>
                 </div>
                 <div class="footer-items">
                     <ul>
                         <li class="footer-nav-item">
-                            <a href="#">Terms & Policy</a>
+                            <a href="# ">Terms & Policy</a>
                         </li>
-                        <div class="line"></div>
+                        <div class="line "></div>
                         <li class="footer-nav-item">
-                            <a href="#">Disclaimer</a>
+                            <a href="# ">Disclaimer</a>
                         </li>
                     </ul>
                 </div>
@@ -414,10 +410,10 @@
         <!-- Footer Section End -->
     </footer>
     <!--=============== JS ===============-->
-    <script src="/static/assets/js/script.js"></script>
+    <script src="/static/assets/js/script.js "></script>
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js " integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF " crossorigin="anonymous "></script>
 </body>
 
 </html>
