--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -62,8 +62,8 @@
                     <div class="header_section position-header">
                         <nav class="d-flex align-items-center justify-content-between">
                             <div class="header-navbar-name">
-                                <h1>My
-                                    <span>Web</span>
+                                <h1>Sabuhi
+                                    <!-- <span>Web</span> -->
                                 </h1>
                             </div>
                             <ul class="d-flex header-navbar-menu">
@@ -103,7 +103,7 @@
                                         <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram">
                                             <i class="fab fa-instagram"></i>
                                         </a>
-                                     </span>
+                                    </span>
                                 </div>
                             </div>
                         </nav>
