--- a/static/assets/css/about.css
+++ b/static/assets/css/about.css
@@ -55,14 +55,14 @@
 }
 
 .list ul li span {
-    font-family: "PoppinsBold";
+    font-family: "PoppinsBold", sans-serif;
     font-size: 18px;
     color: var(--color-cape-cod);
     margin-right: 5px;
 }
 
 .list ul li {
-    font-family: "PoppinsLight";
+    font-family: "PoppinsLight", sans-serif;
     font-size: 18px;
     color: var(--color-cape-cod);
     padding-top: 15px;
