--- a/static/assets/css/intro.css
+++ b/static/assets/css/intro.css
@@ -30,7 +30,7 @@
         overflow: hidden;
     }
     .header-content-text h3 {
-        font-family: "Poppins";
+        font-family: "Poppins", sans-serif;
         font-size: 32px;
         color: var(--color-white);
         margin-bottom: 20px;
