--- a/static/assets/css/services.css
+++ b/static/assets/css/services.css
@@ -1,7 +1,7 @@
 /* What I do? Section Start */
 
 .item h1 {
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     font-size: 20px;
     color: var(--color-charade);
 }
