--- a/static/assets/css/feedbacks.css
+++ b/static/assets/css/feedbacks.css
@@ -19,10 +19,23 @@
 .feedback-item {
     background: var(--color-athens-gray);
     padding: 3rem;
+    border-radius: 8px;
+    transition: all .6s ease;
+}
+
+.feedback-item:hover {
+    background: rgba(23, 28, 36);
+}
+
+.feedback-item:hover h1,
+.feedback-item:hover small,
+.feedback-item:hover p {
+    color: #fff;
 }
 
 .feedbacks-item h1 {
     font-family: "Poppins", sans-serif;
+    font-size: 18px;
     color: var(--color-charade);
 }
 
@@ -39,36 +52,6 @@
 
 .point span>.fa-star {
     color: var(--color-amber);
-}
-
-.social-list span a {
-    font-size: 20px;
-    text-decoration: none;
-    color: var(--color-abbey);
-}
-
-.social-list span a:not(:first-child) {
-    margin-left: 15px;
-}
-
-.social-list span .github:hover {
-    color: var(--color-charade);
-    transition: all .4s ease;
-}
-
-.social-list span .facebook:hover {
-    color: var(--color-cobalt);
-    transition: all .4s ease;
-}
-
-.social-list span .twitter:hover {
-    color: var(--color-dodger-blue);
-    transition: all .4s ease;
-}
-
-.social-list span .instagram:hover {
-    color: var(--color-flamingo);
-    transition: all .4s ease;
 }
 
 
