--- a/templates/admin/feedbacks.html
+++ b/templates/admin/feedbacks.html
@@ -8,7 +8,7 @@
                 <input type="text" name="feedback_name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
-                <label class="text-light">Form</label>
+                <label class="text-light">From</label>
                 <input type="text" name="feedback_from" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
             </div>
             <div class="form-group mt-3">
