--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -175,7 +175,7 @@
         </div>
         <!-- About Section End -->
     </section>
-    <section id="services">
+    <section id="skills">
         <!-- What I do Section Start -->
         <div class="section">
             <!-- Headnig Section Start -->
@@ -203,6 +203,34 @@
             </div>
         </div>
         <!-- What I do Section End -->
+    </section>
+    <section id="blog">
+        <div class="blog-section pt-7">
+            <!-- Headnig Section Start -->
+            <div class="header-text position-relative mb-6">
+                <h2 class="text-center">Blog</h2>
+                <p class="position-center text-center">Read</p>
+            </div>
+            <!-- Headnig Section End -->
+
+            <!-- Blog Section Start -->
+            <div class="container">
+                <div id="blog--js" class="row">
+                    {%for blog in blogs%}
+                    <div class="col-md-4 col-sm-3">
+                        <div class="blog-item">
+                            <a href="{{blog.blog_url}}"><img src="{{blog.blog_img}}" alt="" class="image"></a>
+                            <div class="blog-texts">
+                                <h1>{{blog.blog_name}}</h1>
+                                <h5>{{blog.blog_dateTime}}</h5>
+                            </div>
+                        </div>
+                    </div>
+                    {%endfor%}
+                </div>
+            </div>
+            <!-- Blog Section End -->
+        </div>
     </section>
     <section id="work">
         <!-- My Work Section Start -->
@@ -232,7 +260,6 @@
                             </div>
                         </a>
                     </div>
-
                     {%endfor%}
                 </div>
             </div>
@@ -248,7 +275,6 @@
                 <p class="position-center text-center">Client Speak</p>
             </div>
             <!-- Headnig Section End -->
-
             <div class="row-feedbacks mt-5">
                 {%for feedback in feedbacks%}
                 <div class="feedback-item">
@@ -270,22 +296,6 @@
                             <i class="fas fa-star text-warning"></i>
                             <i class="fas fa-star text-warning"></i>
                         </span>
-                        <div class="social-list">
-                            <span>
-                                <a href="https://github.com/Profile" class="github">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                                <a href="https://www.facebook.com/muhammadd.rza" class="facebook">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="https://github.com/Profile" class="github">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                                <a href="https://www.facebook.com/muhammadd.rza" class="facebook">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </span>
-                        </div>
                     </div>
                 </div>
                 {%endfor%}
@@ -293,34 +303,6 @@
         </div>
         </div>
         <!-- Feedbacks Section End -->
-    </section>
-    <section id="blog">
-        <div class="blog-section pt-7">
-            <!-- Headnig Section Start -->
-            <div class="header-text position-relative mb-6">
-                <h2 class="text-center">Blog</h2>
-                <p class="position-center text-center">Read</p>
-            </div>
-            <!-- Headnig Section End -->
-
-            <!-- Blog Section Start -->
-            <div class="container">
-                <div id="blog--js" class="row">
-                    {%for blog in blogs%}
-                    <div class="col-md-4 col-sm-3">
-                        <div class="blog-item">
-                            <a href="{{blog.blog_url}}"><img src="{{blog.blog_img}}" alt="" class="image"></a>
-                            <div class="blog-texts">
-                                <h1>{{blog.blog_name}}</h1>
-                                <h5>{{blog.blog_dateTime}}</h5>
-                            </div>
-                        </div>
-                    </div>
-                    {%endfor%}
-                </div>
-            </div>
-            <!-- Blog Section End -->
-        </div>
     </section>
     <section id="contact">
         <!-- Contact Section Start -->
@@ -411,9 +393,12 @@
     </footer>
     <!--=============== JS ===============-->
     <script src="/static/assets/js/script.js "></script>
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js " integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js">
+    </script>
 </body>
 
 </html>
