--- a/templates/admin/project.html
+++ b/templates/admin/project.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 d-flex align-items-center">
     <div class="container">
-        <h1 class="text-light">Add new <span style="color: #20C997;">Project</span></h1>
+        <h1 class="text-light pt-35">Add new <span style="color: #20C997;">Project</span></h1>
         <form action="/admin/projects" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="mt-5 text-light">Project Name</label>
