--- a/templates/admin/update_skill.html
+++ b/templates/admin/update_skill.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 h-100vh d-flex align-items-center">
     <div class="container">
-        <h1 class="text-light">Update blog</h1>
+        <h1 class="text-light pt-35">Update blog</h1>
         <form action="/skillEdit/{{newSkill.id}}" method="POST">
             <div class="form-group">
                 <label class="mt-5 text-light">Skills title</label>
