--- a/static/assets/css/about.css
+++ b/static/assets/css/about.css
@@ -37,8 +37,9 @@
 /* Responsive Section End */
 
 .about-information h1 {
-    font-family: "PoppinsBold", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 30px;
+    font-weight: 500;
     margin-bottom: 25px;
 }
 
