--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -256,7 +256,7 @@ html {
     transition: all 0.3s ease-in-out;
     border: none;
     outline: none;
-    /* z-index: 9; */
+    z-index: 9;
     animation: scrollB_anim .6s forwards;
 }
 
