--- a/templates/admin/update_feedbacks.html
+++ b/templates/admin/update_feedbacks.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %} {% block content %}
 <div class="form-item w-100 d-flex align-items-center">
     <div class="container">
-        <h1 class="text-light">Update<span style="color: #20C997;"> Feedbacks</span></h1>
+        <h1 class="text-light pt-35">Update<span style="color: #20C997;"> Feedbacks</span></h1>
         <form action="/feedbackEdit/{{newFeedback.id}}" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="mt-5 text-light">Full Name</label>
