--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -146,7 +146,7 @@
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-md-8 about-information">
-                        <h1>I'm <span>Sabuhi Gasimov,</span> a Web Developer</h1>
+                        <h1>Mən <span>Səbuhi Qasımov,</span> Veb Tərtibatçı</h1>
                         <p>{{prof.about}}</p>
                     </div>
                     <div class="col-md-4">
@@ -162,7 +162,7 @@
                                     <span>Age:</span> {{prof.profile_age}}
                                 </li>
                                 <li>
-                                    <span>From:</span>Lahıc,İsmayıllı,Azərbaycan
+                                    <span>From:</span>Lahıc,Ismayıllı,Azərbaycan
                                 </li>
                             </ul>
                             <div class="admin-contact-button">
