--- a/templates/admin/skills.html
+++ b/templates/admin/skills.html
@@ -5,7 +5,7 @@
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
             <strong>Danger! </strong>Zəhmət olmasa <b>Skills ClassName hissəsinə <a href="https://fontawesome.com/v5.15/icons?d=gallery&p=2" class="text-warning">Bu linkden icon secib onun classname adini yazin</a>
         </div>
-        <h1 class="text-light">Add new <span style="color:#20C997;">Skills</span></h1>
+        <h1 class="text-light pt-35">Add new <span style="color:#20C997;">Skills</span></h1>
         <form action="/admin/skills" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="mt-5 text-light">Skills Title</label>
