--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -9,6 +9,7 @@
     <!-- Add Icon Link -->
     <link rel="icon" href="https://i.pinimg.com/originals/85/76/30/8576308f3ed156f01bd9a865c05852e0.jpg" type="image/x-icon">
     <!--=============== BOOTSTRAP ===============-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!--=============== FONTS ===============-->
@@ -74,7 +75,7 @@
                                     <a href="#about">About</a>
                                 </li>
                                 <li>
-                                    <a href="#services">What I do</a>
+                                    <a href="#skills">What I do</a>
                                 </li>
                                 <li>
                                     <a href="#work">My Work</a>
@@ -94,13 +95,13 @@
                                 </div>
                                 <div class="header-social-list">
                                     <span>
-                                        <a href="https://twitter.com/sabuhi0" class="twitter">
+                                        <a href="https://twitter.com/sabuhi0" class="twitter" target="_blank">
                                             <i class="fab fa-twitter"></i>
                                         </a>
-                                         <a href="https://www.facebook.com/gasimov0/" class="facebook">
+                                         <a href="https://www.facebook.com/gasimov0/" class="facebook" target="_blank">
                                             <i class="fab fa-facebook-f"></i>
                                         </a>
-                                        <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram">
+                                        <a href="https://www.instagram.com/sabuhigasimov/?hl=en" class="instagram" target="_blank">
                                             <i class="fab fa-instagram"></i>
                                         </a>
                                     </span>
@@ -146,7 +147,7 @@
             <div class="container">
                 <div class="row mt-4">
                     <div class="col-md-8 about-information">
-                        <h1>Mən <span>Səbuhi Qasımov,</span> Veb Tərtibatçı</h1>
+                        <h1>I'm <span>Sabuhi Gasimov,</span> Web Design</h1>
                         <p>{{prof.about}}</p>
                     </div>
                     <div class="col-md-4">
@@ -275,7 +276,7 @@
                 <p class="position-center text-center">Client Speak</p>
             </div>
             <!-- Headnig Section End -->
-            <div class="row-feedbacks mt-5">
+            <!-- <div class="row-feedbacks mt-5">
                 {%for feedback in feedbacks%}
                 <div class="feedback-item">
                     <div class="d-flex align-items-center mb-25">
@@ -299,7 +300,53 @@
                     </div>
                 </div>
                 {%endfor%}
+            </div> -->
+        </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <!-- <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            </div> -->
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <div class="d-flex algin-item-center justify-content-center fb-slide-prf">
+                        <img style="border-radius: 50%;object-fit: cover;" src="/static/assets/uploads/database.jpeg" class="d-block" alt="...">
+                    </div>
+                    <div class="fb-slide-title text-center">
+                        <h1>Rahman</h1>
+                    </div>
+                    <div class="fb-slide-from text-center">
+                        <small>Baku</small>
+                    </div>
+                    <div class="fb-slide-content text-center">
+                        <p>Bu uşağın vunderkind olduuğuna inanıram</p>
+                    </div>
+                </div>
+                {%for feedback in feedbacks%}
+                <div class="carousel-item" data-bs-interval="2000">
+                    <div class="d-flex algin-item-center justify-content-center fb-slide-prf">
+                        <img style="border-radius: 50%;object-fit: cover;" src="{{feedback.feedback_photo}}" class="d-block" alt="...">
+                    </div>
+                    <div class="fb-slide-title text-center">
+                        <h1>{{feedback.feedback_name}}</h1>
+                    </div>
+                    <div class="fb-slide-from text-center">
+                        <small>{{feedback.feedback_from}}</small>
+                    </div>
+                    <div class="fb-slide-content text-center">
+                        <p>{{feedback.feedback_detail}}</p>
+                    </div>
+                </div>
+                {%endfor%}
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
         </div>
         </div>
         <!-- Feedbacks Section End -->
@@ -393,12 +440,9 @@
     </footer>
     <!--=============== JS ===============-->
     <script src="/static/assets/js/script.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 
 </html>
